# rag-as-services

./: README.MD
backend/javascript/: db.js  index.js  package-lock.json  package.json
backend/javascript/schema/: models_key.js  rag_keys.js  user.js
backend/python/: main.py  pyproject.toml  requirements.txt  vercel.json
frontend/: .eslintrc.js  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/Home/: Call_to_action.tsx  FAQ.tsx  Feature.tsx  Footer.tsx  Header.tsx  Hero.tsx  Pricing.tsx  Stars.tsx
frontend/src/components/dashboard/: Chatbot.tsx  Header.tsx  Main.tsx
frontend/src/constant/: clints.js
